--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,26 +5,34 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "@tanstack/react-query": "^5.8.0",
-    "zustand": "^4.4.0",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^14.3.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "autoprefixer": "^10.4.0",
+    "jsdom": "^23.2.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
-    "tailwindcss": "^3.3.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "vitest": "^1.6.1"
   }
 }
