--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,42 @@
 [pytest]
+# =============================================================================
+# Pytest Configuration for Synapse
+# =============================================================================
+
+# Test discovery
 testpaths = tests
 pythonpath = .
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short
+
+# Output formatting
+addopts = -v --tb=short --strict-markers
+
+# =============================================================================
+# Markers (also registered in conftest.py for IDE support)
+# =============================================================================
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests requiring multiple components or external services
+    e2e: marks end-to-end tests requiring full system
+    civitai: marks tests involving Civitai API
+    database: marks tests requiring database setup
+
+# =============================================================================
+# Filtering
+# =============================================================================
+# Ignore deprecated directories
+norecursedirs =
+    .git
+    __pycache__
+    .pytest_cache
+    node_modules
+    apps/api/src/routers
+
+# =============================================================================
+# Warnings
+# =============================================================================
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
